--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section class="home">
     <div class="home-img">
-      <img src="/home/rwwan/Downloads/good.jpg" alt="">
+      <img src="good.jpg" alt="">
     </div>
     <div class="home-content">
       <h1>Hi, it's <span>Rwan Malek</span></h1>
