--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
     </div>
   </section>
 
-  <section id="education">
+  <section id="education" class="section-box">
     <h2><span>Education</span></h2>
     <p><strong>University:</strong> Ahram Canadian University</p>
     <p><strong>Faculty:</strong> Computer Science</p>
     <p><strong>Major:</strong> Artificial Intelligence</p>
   </section>
 
-  <section id="skills">
+  <section id="skills" class="section-box">
     <h2><span>Skills</span></h2>
     <p>Python | Matplotlib | Pandas | Sklearn | TensorFlow | YOLOv8 | HTML | CSS | C++ | C#</p>
   </section>
 
-  <section id="projects">
+  <section id="projects" class="section-box">
     <h2><span>Projects</span></h2>
     <ul>
       <li>Tourist Place Recognition in Egypt using YOLOv8</li>
@@ -59,7 +59,7 @@
     </ul>
   </section>
 
-  <section id="experience">
+  <section id="experience" class="section-box">
     <h2><span>Experience</span></h2>
     <p>Currently an intern at Code Alpha, gaining hands-on experience in AI and Machine Learning.</p>
   </section>
