--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <meta name="viewport" content="width=device-width">
-  <title>Portfolio Website</title>
+  <title>Rwan's Portfolio Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
