--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <a href="#" class="logo">Rwan</a>
     <nav>
       <a href="#" class="active">Home</a>
-      <a href="#education">Education</a>
-      <a href="#skills">Skills</a>
-      <a href="#experience">Experience</a>
-      <a href="#projects">Projects</a>
+      <a href="#education"><span>Education</span></a>
+      <a href="#skills"><span>Skills</span></a>
+      <a href="#experience"><span>Experience</span></a>
+      <a href="#projects"><span>Projects</span></a>
       
     </nav>
   </header>
