--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="home-content">
       <h1>Hi, it's <span>Rwan Malek</span></h1>
-      <h3 class="typing-text">I'm a <span>Data Scientist</span></h3>
+      <h3 class="typing-text">I'm a <span>Junior Data Scientist</span></h3>
       <p>I am a recent Computer Science graduate with a major in Artificial Intelligence i have worked on plenty of projects during uni and after it.</p>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/rwan-elfiky-9098212b7/"><i class="fa-brands fa-linkedin"></i></a>
